...
                android:id="@+id/pager_indicator"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/image_pageRight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/next"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right_selector" />
        </RelativeLayout>
    </RelativeLayout>
...
