<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.akvo.caddisfly.widget.HtmlTextView
        android:id="@+id/textSelectInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:lineSpacingExtra="10dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/select_test"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonTestSelected"
        style="@style/ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:enabled="true"
        android:onClick="onSelectTestClick"
        android:text="@string/test_selected"
        android:theme="?primaryButtonStyle" />

</LinearLayout>
